	(update_state): Initialize some pointers to NULL.
	(set_icon_visibility): Force the "unpressed state" for the status
	bar icon when changing the state.
	(check_for_notifications_thread): Fixed a problem based on opening
	a file for reading when writing, by libculr, was required. Also
	added extra logic to validate the downloaded file to be sure about
	if it's or not a valid notification file before writing it to disk.

2008-02-21  Felipe Erias Morandeira  <femorandeira@maemo.org>

	* src repo.cc (add_entry) : Use HamLongLabel instead of GtkLabel.

	* ham-long-label.[ch] : Composite widget that makes it possible
	to show long strings (i.e. URLs) in a single line; if the text
	is too long, two buttons allow the user to move back and forth
	so they can see the whole string of text. It inherits GtkHBox.
	(ham_long_label_new) : Creates a HamLongLabel with the given text
	(ham_long_label_new_with_markup) : Creates a #HamLongLabel with the
	given Pango markup.
	(ham_long_label_set_text) : Sets the given text in a HamLongLabel.
	(ham_long_label_set_markup) : Sets the given markup in a HamLongLabel.

2008-02-20  Mario Sanchez Prada  <msanchez@maemo.org>

	Improving the "Use $HOME/.hildon-application-manager/ directory
	for per-user state" bug implementation, by adding a new API to
	manage user files (state files). This API will be use both by the
	frontend of the HAM and the update-notifier status bar plugin.

	* src/user_files.h, src/user_files.c: New files implementing a
	small API for managing user files under the "state" directory.
	It takes care, in a "clean" way, of files that could be placed in
	"deprecated" directories, so it's easy to ask for a file without
	having to be worried about it current location.
	(HAM_STATE_DIR): Moved from its original location to have it here,
	centralized together with the rest of "defines".
	(UFILE_RESTORE_BACKUP): Likewise, and renamed with the "UFILE_"
	prefix to be have a more uniform "nomenclator" (from settings.h).